--- a/index.html
+++ b/index.html
@@ -12,12 +12,16 @@
 		<!-- Sidebar -->
 			<section id="sidebar">
 				<div class="inner">
+
 					<nav>
 						<ul>
 							<li><a href="#intro">Welcome</a></li>
-							<li><a href="#one">Skills</a></li>
-							<li><a href="#two">What I do</a></li>
-							<li><a href="#three">Get in touch</a></li>
+							<li><a href="#one">Test Documentation</a></li>
+							<li><a href="#two">Python</a></li>
+							<li><a href="#three">SQL</a></li>
+							<li><a href="#four">C</a></li>
+							<li><a href="#five">Tools and Languges</a></li>
+							<li><a href="#six">Get in touch</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -51,36 +55,65 @@
 									</ul>
 								</div>
 							</div>
-							</section>
-							<section>
-							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
-							<div class="content">
-								<div class="inner">
-									<h2>Skill 1</h2>
-									<p>Skilled in manual and automation testing of mobile, web-based, and cloud applications.</p>
-									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
-									</ul>
-								</div>
-							</div>
 						</section>
+					</section>
+
+				<!-- Two -->				
+					<section id="two" class="wrapper style2 spotlights">
 						<section>
-							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
+							<a href="#" class="image"><img src="images/pic09.jpg" alt="python" srcset="elva-fairy-480w.jpg 480w, elva-fairy-800w.jpg 800w"
+								sizes="(max-width: 600px) 480px, 800px"/></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Skill 2</h2>
-									<p>Hands-on experienced in manual and automation testing of mobile (IOS, Android), web-based and cloud applications.</p>
+									<h2>Python</h2>
+									<!-- <p>Skilled in manual and automation testing of mobile, web-based, and cloud applications.</p> -->
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="https://github.com/Marinatsw/python" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
 						</section>
 					</section>
 
-				<!-- Two -->
-					<section id="two" class="wrapper style3 fade-up">
+				<!-- Three -->
+					<section id="three" class="wrapper style2 spotlights">
+						<section>
+							<a href="#" class="image"><img src="images/pic10.jpg" alt="" data-position="top center" srcset="elva-fairy-480w.jpg 480w, elva-fairy-800w.jpg 800w"
+								sizes="(max-width: 600px) 480px, 800px" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>SQL</h2>
+									<!-- <p>Hands-on experienced in manual and automation testing of mobile (IOS, Android), web-based and cloud applications.</p> -->
+									<ul class="actions">
+										<li><a href="https://github.com/Marinatsw/SQL-queries" class="button">Learn more</a></li>
+									</ul>
+								</div>
+							</div>
+						</section>
+					</section>
+					
+					
+				<!-- Four -->
+						<section id="four" class="wrapper style2 spotlights">
+									<section>
+										<a href="#" class="image"><img src="images/pic12.jpg" alt="" data-position="top center" srcset="elva-fairy-480w.jpg 480w, elva-fairy-800w.jpg 800w"
+											sizes="(max-width: 600px) 480px, 800px" /></a>
+										<div class="content">
+											<div class="inner">
+												<h2>C</h2>
+												<!-- <p>Hands-on experienced in manual and automation testing of mobile (IOS, Android), web-based and cloud applications.</p>-->
+												<ul class="actions">
+													<li><a href="https://github.com/Marinatsw/C" class="button">Learn more</a></li>
+												</ul>
+											</div>
+										</div>
+									</section>
+								</section>	
+
+				<!-- Five -->
+					<section id="five" class="wrapper style3 fade-up">
 						<div class="inner">
+							<a href="#"></a>
 							<h2>Tools and languages</h2>
 							<div class="features">
 								<section>
@@ -114,52 +147,25 @@
 									<p>Postman, SoapUI, REST ASURED</p>
 								</section>
 							</div>
-							<ul class="actions">
-								<li><a href="generic.html" class="button">Learn more</a></li>
-							</ul>
 						</div>
 					</section>
 
-				<!-- Three -->
-					<section id="three" class="wrapper style1 fade-up">
+				<!-- Six -->
+					<section id="six" class="wrapper style1 fade-up">
 						<div class="inner">
 							<h2>Get in touch</h2>
 							<div class="split style1">
 								<section>
-									<form method="post" action="#">
-										<div class="fields">
-											<div class="field half">
-												<label for="name">Name</label>
-												<input type="text" name="name" id="name" />
-											</div>
-											<div class="field half">
-												<label for="email">Email</label>
-												<input type="text" name="email" id="email" />
-											</div>
-											<div class="field">
-												<label for="message">Message</label>
-												<textarea name="message" id="message" rows="5"></textarea>
-											</div>
-										</div>
-										<ul class="actions">
-											<li><a href="" class="button submit">Send Message</a></li>
-										</ul>
-									</form>
-								</section>
-								<section>
 									<ul class="contact">
 										<li>
 											<h3>Email</h3>
-											<a href="#">marynatsvet@gmail.com
+											<a href="mailto:marynatsvet@gmail.com">marynatsvet@gmail.com</a>
 										</li>
 										<li>
 											<h3>Social</h3>
 											<ul class="icons">
-												<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-												<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-												<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-												<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-												<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+												<li><a href="https://github.com/Marinatsw"" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+												<li><a href="https://www.linkedin.com/in/marina-tsvetkova/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 											</ul>
 										</li>
 									</ul>
@@ -186,6 +192,6 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-
+			
 	</body>
 </html>
