adding new site

--- a/generic.html
+++ b/generic.html
@@ -1,5 +1,6 @@
 <!DOCTYPE HTML>
 <html>
+<link rel="shortcut icon" type="image/x-icon" href="images/palm.ico">
 	<head>
 		<title>Testing atrifacts</title>
 		<meta charset="utf-8" />
