--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE HTML>
 <html>
+<link rel="shortcut icon" type="image/x-icon" href="images/palm.ico">
 	<head>
 		<title></title>
 		<meta charset="utf-8" />
@@ -108,7 +109,7 @@
 											</div>
 										</div>
 									</section>
-								</section>	
+						</section>	
 
 				<!-- Five -->
 					<section id="five" class="wrapper style3 fade-up">
