--- a/elements.html
+++ b/elements.html
@@ -1,10 +1,7 @@
 <!DOCTYPE HTML>
-<!--
-	Hyperspace by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
+<link rel="shortcut icon" type="image/x-icon" href="images/palm.ico">
+
 	<head>
 		<title>Elements - Hyperspace by HTML5 UP</title>
 		<meta charset="utf-8" />
